--- a/src/components/tf-card/tf-card.css
+++ b/src/components/tf-card/tf-card.css
@@ -101,10 +101,12 @@
 .glass-icons_title {
   margin: 30px 0 0;
 }
-.glass-icons_subtitle {
+.glass-icons_subtitle  {
   color: #9497a1;
   overflow: hidden;
+  max-height: 130px;
   margin-top: -10px;
+  padding-right: 35px;
 }
 .glass-icons_link {
   position: absolute;
@@ -295,10 +297,11 @@
   margin-top: 35px;
 }
 .services_mobile_glass_icons_mob_subtitle {
-  max-height: 160px;
+  max-height: 155px;
   color: #9497a1;
   overflow: hidden;
   margin-top: -20px;
+  padding-right: 35px;;
 }
 .services_mobile_glass_icons_mob_link {
   display: flex;
